# ClankerShooterSem7

./: CMakeLists.txt  README.md  acceptanceTest.docx
.github/workflows/: c-cpp.yml
code/Sem7HiTech_ClankerShooter/: CMakeLists.txt  Sem7HiTech_ClankerShooter.code-workspace  flowchart.puml  platformio.ini
code/Sem7HiTech_ClankerShooter/.github/workflows/: windows-build.yml
code/Sem7HiTech_ClankerShooter/include/: Button.h  Clanker.h  IButton.h  display.h  gyroscoop.h  joyStick.h
code/Sem7HiTech_ClankerShooter/src/: Button.cpp  Clanker.cpp  display.cpp  gyroscoop.cpp  joyStick.cpp  main.cpp
diagram/: .$shematischeTekeningClankerShooter.drawio.bkp  pinoutClankerShooter.xlsx  shematischeTekeningClankerShooter.drawio
diagram/flowchart/: flowchart.puml  image.docx
diagram/uml/: uml.docx  uml.puml
external person work (not my work)/: batteryPack.txt
research/: Projectplan.docx
research/brainstorms/: eersteBrainstomPersonalProject.docx  tweedeBrainstomPeronsalProject.docx
research/sshkeyFixing/: HowToFixingMySshKey.docx
